# vscode-llm-sidecar

./: .gitignore  .vscodeignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
assets/: runtime-manifest.json  runtime-manifest.schema.json
crates/sidecar-proxy/: Cargo.toml
crates/sidecar-proxy/src/: activity.rs  config.rs  context.rs  dlp.rs  grammar.rs  llama_client.rs  logging.rs  main.rs  openai.rs  profiles.rs  responses.rs  router.rs  tool_filter.rs  upstream.rs
crates/sidecar-proxy/src/adapters/: inline_xml_tools.rs  mod.rs  orchestrated_tools.rs  pass_through.rs
docs/: CONTRIBUTING.md  PUBLISHING.md  TESTING.md
scripts/: asset-lib.mjs  asset-lib.test.mjs  build-extension.mjs  bump-version.mjs  bump-version.test.mjs  copy-proxy.mjs  create-vsix.mjs  fetch-llama-server.mjs  fetch-model.mjs  integration-proxy.mjs  layout-release-binaries.mjs  llama-runtime-files.mjs  package-offline-bundle.mjs  publish-marketplace.sh  setup-dev.mjs  stage-llama-runtime.mjs  sync-llama-sha256.mjs  verify-assets.mjs
src/: extension.ts
src/adapters/: profiles.ts
src/commands/: index.ts
src/compliance/: audit.ts  hitl-policy.ts  hitl.test.ts  hitl.ts
src/config/: proxy-binary.ts  runtime-manifest.ts  schema.ts  store.test.ts  store.ts
src/context/: workspace.ts
src/inline/: completion.ts
src/llama/: binary.ts  capabilities.ts  detect-backend.ts  lifecycle.test.ts  lifecycle.ts  llama-owner-fs.ts  memory-profile.ts  memory-tuning.test.ts  (+9 more)
(+43 files in other folders)
