[package]
name = "sidecar-proxy"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible proxy with local bind-and-return tool orchestration"

[[bin]]
name = "sidecar-proxy"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
bytes = "1"
futures-util = "0.3"
http-body-util = "0.1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"
walkdir = "2"
lru = "0.12"

[dev-dependencies]
tokio-test = "0.4"
